Update Index with Text Red(Status rekrutmen)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<li><a href="daftar-acara">Daftar Acara</a></li>
 				<li><a href="admin">Admin</a></li>
 				<li><a href="hy">HY</a></li>
+				<li><a href="social-media.html">Social Media</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -63,7 +64,7 @@
 					<h5>Negara: <font color="white">??</font>Indonesia (ID/IDN)</h5>
 					<!-- <h5>Anggota: <font color="white">/</font>152</h5> -->
 					<h5>Didirikan: <font color="white">.</font>09/04/2020</h5>
-					<p>Status Rekrutmen Terbuka.</p>
+					<p class="status">Status Rekrutmen Terbuka.</p>
 				</div>
 			</div>
 		</div>
