Buat gambarnya bisa buka di tab baru waktu di klik

--- a/acara-info/17-an.html
+++ b/acara-info/17-an.html
@@ -67,42 +67,58 @@
 				<div class="row blog-gallery">
 					<div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-1.png" alt="onetime#8401">
+							<a href="/img/event/lomba-gambar-1.png" target="_blank">
+								<img src="/img/event/lomba-gambar-1.png" alt="onetime#8401">
+							</a>
 						</div>
                     </div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-2.png" alt="verox1#0000">
+							<a href="/img/event/lomba-gambar-2.png" target="_blank">
+								<img src="/img/event/lomba-gambar-2.png" alt="verox1#0000">
+							</a>
 						</div>
 					</div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-3.png" alt="imnoob#5424">
+							<a href="/img/event/lomba-gambar-3.png" target="_blank">
+								<img src="/img/event/lomba-gambar-3.png" alt="imnoob#5424">
+							</a>
 						</div>
 					</div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-4.png" alt="daniimuts#0000">
+							<a href="/img/event/lomba-gambar-4.png" target="_blank">
+								<img src="/img/event/lomba-gambar-4.png" alt="daniimuts#0000">
+							</a>
 						</div>
 					</div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-5.png" alt="adamjuz#9960">
+							<a href="/img/event/lomba-gambar-5.png" target="_blank">
+								<img src="/img/event/lomba-gambar-5.png" alt="adamjuz#9960">
+							</a>
 						</div>
 					</div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-6.png" alt="angelmnzz#3256">
+							<a href="/img/event/lomba-gambar-6.png">
+								<img src="/img/event/lomba-gambar-6.png" alt="angelmnzz#3256">
+							</a>
 						</div>
 					</div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-7.png" alt="spieky#0000">
+							<a href="/img/event/lomba-gambar-7.png">
+								<img src="/img/event/lomba-gambar-7.png" alt="spieky#0000">
+							</a>
 						</div>
 					</div>
                     <div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/lomba-gambar-8.png" alt="yama#2676">
+							<a href="/img/event/lomba-gambar-8.png">
+								<img src="/img/event/lomba-gambar-8.png" alt="yama#2676">
+							</a>
 						</div>
 					</div>
                 </div><br><br><br>
