--- a/acara-info/first-event.html
+++ b/acara-info/first-event.html
@@ -66,27 +66,37 @@
 				<div class="row blog-gallery">
 					<div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/fs-event-camp-1.png" alt="">
+							<a href="/img/event/fs-event-camp-1.png" target="_blank">
+								<img src="/img/event/fs-event-camp-1.png" alt="">
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/fs-event-camp-2.png" alt="">
+							<a href="/img/event/fs-event-camp-2.png" target="_blank">
+								<img src="/img/event/fs-event-camp-2.png" alt="">
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/fs-event-racing-win.png" alt="">
+							<a href="/img/event/fs-event-racing-win.png" target="_blank">
+								<img src="/img/event/fs-event-racing-win.png" alt="">
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/fs-event-survivor.png" alt="">
+							<a href="/img/event/fs-event-survivor.png" target="_blank">
+								<img src="/img/event/fs-event-survivor.png" alt="">
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-3 p-0">
 						<div class="bg-item">
-							<img src="/img/event/fs-event-tanyajawab.png" alt="">
+							<a href="/img/event/fs-event-tanyajawab.png" target="_blank">
+								<img src="/img/event/fs-event-tanyajawab.png" alt="">
+							</a>
 						</div>
 					</div>
 				</div><br><br><br>
