--- a/admin.html
+++ b/admin.html
@@ -1,203 +1,249 @@
 <html lang="en">
-<head>
-	<title>Miawu - Admin</title>
-	<link href="img/event/miawuk.png" rel="shortcut icon"/>
-	<meta charset="UTF-8">
-	<meta name="description" content="Miawu">
-	<meta name="keywords" content="photo, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/themify-icons.css"/>
-	<link rel="stylesheet" href="css/accordion.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
+  <head>
+    <title>Miawu - Admin</title>
+    <link href="img/event/miawuk.png" rel="shortcut icon" />
+    <meta charset="UTF-8" />
+    <meta name="description" content="Miawu" />
+    <meta name="keywords" content="photo, html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/themify-icons.css" />
+    <link rel="stylesheet" href="css/accordion.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
 
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+    <!-- Main Stylesheets -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Page Preloder -->
+    <div id="preloder">
+      <div class="loader"></div>
+    </div>
 
-</head>
-<body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
+    <!-- Offcanvas Menu Section -->
+    <div class="menu-wrapper">
+      <div class="menu-switch">
+        <i class="ti-menu"></i>
+      </div>
+    </div>
+    <div class="side-menu-wrapper">
+      <div class="sm-header">
+        <div class="menu-close">
+          <i class="ti-arrow-left"></i>
+        </div>
+      </div>
+      <nav class="main-menu">
+        <ul>
+          <li><a href="index">Profil</a></li>
+          <li><a href="galeri">Galeri</a></li>
+          <li><a href="daftar-acara">Daftar Acara</a></li>
+          <li><a href="admin" class="active">Admin</a></li>
+          <li><a href="hy">HY</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- Offcanvas Menu Section end -->
 
-	<!-- Offcanvas Menu Section -->
-	<div class="menu-wrapper">
-		<div class="menu-switch">
-			<i class="ti-menu"></i>
-		</div>
-	</div>
-	<div class="side-menu-wrapper">
-		<div class="sm-header">
-			<div class="menu-close">
-				<i class="ti-arrow-left"></i>
-			</div>
-		</div>
-		<nav class="main-menu">
-			<ul>
-				<li><a href="index">Profil</a></li>
-				<li><a href="galeri">Galeri</a></li>
-				<li><a href="daftar-acara">Daftar Acara</a></li>
-				<li><a href="admin" class="active">Admin</a></li>
-				<li><a href="hy">HY</a></li>
-			</ul>
-		</nav>
-	</div>
-	<!-- Offcanvas Menu Section end -->
+    <!-- Hero Section end -->
+    <section class="hero-section">
+      <div class="pana-accordion" id="accordion">
+        <div class="pana-accordion-wrap">
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/mia.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/mia.png" alt="" />
+                <h4>Mia26#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/brendod.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/brenda.png" alt="" />
+                <h4>Spieky#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/ruru.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/ruru.png" alt="" />
+                <h4>Ruru#1623</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/minek.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/mine.jpg" alt="" />
+                <h4>Jasminevza#0451</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/alice.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/rani.png" alt="" />
+                <h4>Alicekwkland#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/aslam.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/aslam.png" alt="" />
+                <h4>Aslaaaam#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/wilson.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/wilson.png" alt="" />
+                <h4>Verox1#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div
+            class="pana-accordion-item set-bg"
+            data-setbg="img/curut/dapi.png"
+          >
+            <div class="pa-text">
+              <div class="pa-author">
+                <img src="img/admin/dapi.png" alt="" />
+                <h4>Reighpuy#1257</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hero-slider-warp">
+        <div class="hero-slider owl-carousel">
+          <div class="hero-item set-bg" data-setbg="img/curut/mia.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/576915512098029578/4af8212573b250e73a9e48ae1b8655f7.webp?size=128"
+                  alt=""
+                />
+                <h4>Mia26#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/brendod.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/598819826982715393/75667f3a2f683df3e24b1e78c56f5aa2.png?size=128"
+                  alt=""
+                />
+                <h4>Spieky#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/ruru.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/525287599112454144/e7420235c6b9eb64f34aa8c90631db21.png?size=128"
+                  alt=""
+                />
+                <h4>Ruru#1623</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/minek.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/663049629209985036/43fcd7157decf3fc403200518215b0ac.png?size=128"
+                  alt=""
+                />
+                <h4>Jasminevza#0451</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/alice.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/417526069240004608/25166235241ae884c191a9fc7321dc9b.png?size=128"
+                  alt=""
+                />
+                <h4>Alicekwkland#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/aslam.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/561412873742712855/f3edb8733648403e9b81082a4bb63a97.png?size=128"
+                  alt=""
+                />
+                <h4>Aslaaaam#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/wilson.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=128"
+                  alt=""
+                />
+                <h4>Verox1#0000</h4>
+              </div>
+            </div>
+          </div>
+          <div class="hero-item set-bg" data-setbg="img/curut/dapi.png">
+            <div class="pa-text">
+              <div class="pa-author">
+                <img
+                  src="https://cdn.discordapp.com/avatars/415466692064313344/0338e10d8ab1c8fb6678f22e62147e29.png?size=128"
+                  alt=""
+                />
+                <h4>Reighpuy#1257</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Hero Section end -->
 
-	<!-- Hero Section end -->
-	<section class="hero-section">
-		<div class="pana-accordion" id="accordion">
-    		<div class="pana-accordion-wrap">
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/mia.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/576915512098029578/4af8212573b250e73a9e48ae1b8655f7.webp?size=128" alt="">
-							<h4>Mia26#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/brendod.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/598819826982715393/75667f3a2f683df3e24b1e78c56f5aa2.png?size=128" alt="">
-							<h4>Spieky#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/ruru.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/525287599112454144/e7420235c6b9eb64f34aa8c90631db21.png?size=128" alt="">
-							<h4>Ruru#1623</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/minek.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/663049629209985036/43fcd7157decf3fc403200518215b0ac.png?size=128" alt="">
-							<h4>Jasminevza#0451</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/alice.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/417526069240004608/25166235241ae884c191a9fc7321dc9b.png?size=128" alt="">
-							<h4>Alicekwkland#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/aslam.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/561412873742712855/f3edb8733648403e9b81082a4bb63a97.png?size=128" alt="">
-							<h4>Aslaaaam#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/wilson.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=128" alt="">
-							<h4>Verox1#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/curut/dapi.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/415466692064313344/0338e10d8ab1c8fb6678f22e62147e29.png?size=128" alt="">
-							<h4>Reighpuy#1257</h4>
-						</div>
-					</div>
-				</div>
-	    	</div>
-		</div>
-		<div class="hero-slider-warp">
-			<div class="hero-slider owl-carousel">
-				<div class="hero-item set-bg" data-setbg="img/curut/mia.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/576915512098029578/4af8212573b250e73a9e48ae1b8655f7.webp?size=128" alt="">
-							<h4>Mia26#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/brendod.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/598819826982715393/75667f3a2f683df3e24b1e78c56f5aa2.png?size=128" alt="">
-							<h4>Spieky#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/ruru.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/525287599112454144/e7420235c6b9eb64f34aa8c90631db21.png?size=128" alt="">
-							<h4>Ruru#1623</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/minek.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/663049629209985036/43fcd7157decf3fc403200518215b0ac.png?size=128" alt="">
-							<h4>Jasminevza#0451</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/alice.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/417526069240004608/25166235241ae884c191a9fc7321dc9b.png?size=128" alt="">
-							<h4>Alicekwkland#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/aslam.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/561412873742712855/f3edb8733648403e9b81082a4bb63a97.png?size=128" alt="">
-							<h4>Aslaaaam#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/wilson.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=128" alt="">
-							<h4>Verox1#0000</h4>
-						</div>
-					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/curut/dapi.png">
-					<div class="pa-text">
-						<div class="pa-author">
-							<img src="https://cdn.discordapp.com/avatars/415466692064313344/0338e10d8ab1c8fb6678f22e62147e29.png?size=128" alt="">
-							<h4>Reighpuy#1257</h4>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Hero Section end -->
-
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/vendor/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/imagesloaded.pkgd.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/pana-accordion.js"></script>
-	<script src="js/main.js"></script>
-
-	</body>
+    <!--====== Javascripts & Jquery ======-->
+    <script src="js/vendor/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
+    <script src="js/jquery.nicescroll.min.js"></script>
+    <script src="js/circle-progress.min.js"></script>
+    <script src="js/pana-accordion.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
