--- a/index.html
+++ b/index.html
@@ -50,22 +50,8 @@
 	<!-- About Section end -->
 	<section class="about-section">
 		<div class="about-warp">
-			<div class="about-left">
-				<div class="about-img">
-					<img width="500" height="200" src="img/event/miawu-logo.png" alt="">
-				</div>
-			</div>
-			<div class="about-bottom">
-				<div class="about-text">
-					</center><h3>Miawu Profil Info</h3></center><br>
-					<h5>Nama: <font color="white">???</font>Miawu</h5>
-					<h5>ID: <font color="white">????....?</font>1147896</h5>
-					<h5>Negara: <font color="white">??</font>Indonesia (ID/IDN)</h5>
-					<!-- <h5>Anggota: <font color="white">/</font>162</h5> -->
-					<h5>Didirikan: <font color="white">.</font>09/04/2020</h5>
-					<p class="status">Status Rekrutmen Terbuka.</p>
-				</div>
-			</div>
+			<center><br><br><br><h1 style="font-size:10vw;">« Miawu »</h1>
+			<h1 style="font-size:10vw;">&#129392 - &#128548</h1></center>
 		</div>
 	</section>
 	<!-- About Section end -->
