--- a/daftar-acara.html
+++ b/daftar-acara.html
@@ -78,7 +78,16 @@
 					<div class="blog-item">
 						<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232783927771217/emot3tfm.png" alt="Emote_03_tfm">
 						<div class="bi-text">
-							<!-- <div class="bi-date">16 Agustus 2020</div> -->
+							<div class="bi-date">Desember???</div>
+							<h3>Akan Datang</h3>
+						</div>
+					</div>
+				</div>
+				<div class="blog-grid">
+					<div class="blog-item">
+						<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232795919286433/emot8tfm.png" alt="Emote_03_tfm">
+						<div class="bi-text">
+							<div class="bi-date">Belum diketahui</div>
 							<h3>Akan Datang</h3>
 						</div>
 					</div>
