--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 	<meta name="description" content="Miawu">
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/themify-icons.css"/>
 	<link rel="stylesheet" href="css/accordion.css"/>
 	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
 
-	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css"/>
 
 </head>
@@ -23,7 +21,6 @@
 		<div class="loader"></div>
 	</div>
 
-	<!-- Offcanvas Menu Section -->
 	<div class="menu-wrapper">
 		<div class="menu-switch">
 			<i class="ti-menu"></i>
@@ -44,14 +41,21 @@
 				<li><a href="hy">HY</a></li>
 			</ul>
 		</nav>
+		<div class="sm-footer">
+			<div class="sm-social">
+				<a href="https://instagram.com/miawu.co" target="_blank"><i class="ti-instagram"></i></a>
+				<a href="https://github.com/miawuu" target="_blank"><i class="ti-github"></i></a>
+			</div>
+			<div class="copyright-text"><p></p></div>
+		</div>
 	</div>
-	<!-- Offcanvas Menu Section end -->
 
 	<!-- About Section end -->
 	<section class="about-section">
 		<div class="about-warp">
 			<center><br><br><br><h1 style="font-size:10vw;">« Miawu »</h1>
-			<h1 style="font-size:10vw;">&#129392 - &#128548</h1></center>
+			<h1 style="font-size:10vw;">&#129392 - &#128548</h1><br>
+			<iframe src="https://discordapp.com/widget?id=729307691670962307&theme=light" width="350" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></center>
 		</div>
 	</section>
 	<!-- About Section end -->
