added socmed acc

--- a/hy.html
+++ b/hy.html
@@ -43,6 +43,13 @@
                 <li><a href="hy" class="active">HY</a></li>
 			</ul>
 		</nav>
+		<div class="sm-footer">
+			<div class="sm-social">
+				<a href="https://instagram.com/miawu.co" target="_blank"><i class="ti-instagram"></i></a>
+				<a href="https://github.com/miawuu" target="_blank"><i class="ti-github"></i></a>
+			</div>
+			<div class="copyright-text"><p></p></div>
+		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
 
