admin new layout design

--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
 
     <!-- Main Stylesheets -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/adminStyle.css">
   </head>
   <body>
     <!-- Page Preloder -->
@@ -55,187 +56,55 @@
 
     <!-- Hero Section end -->
     <section class="hero-section">
-      <div class="pana-accordion" id="accordion">
-        <div class="pana-accordion-wrap">
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/mia.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/mia.png" alt="" />
-                <h4>Mia26#0000</h4>
-              </div>
-            </div>
+      <div class="container">
+        <div class="card-wrapper">
+          <div class="card">
+            <img src="img/curut/mia.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/mia.png" alt="profile image" class="profile-image">
+            <h2>Mia69</h2>
+            <p class="description">apa itu adus</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/brendod.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/brenda.png" alt="" />
-                <h4>Spieky#0000</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/brendod.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/brenda.png" alt="profile image" class="profile-image">
+            <h2>Spieky</h2>
+            <p class="description">description</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/ruru.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/ruru.png" alt="" />
-                <h4>Ruru#1623</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/ruru.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/ruru.png" alt="profile image" class="profile-image">
+            <h2>Ruru</h2>
+            <p class="description">description</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/minek.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/mine.jpg" alt="" />
-                <h4>Jasminevza#0451</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/minek.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/mine.jpg" alt="profile image" class="profile-image">
+            <h2>Jasminevza</h2>
+            <p class="description">description</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/alice.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/rani.png" alt="" />
-                <h4>Alicekwkland#0000</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/alice.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/rani.png" alt="profile image" class="profile-image">
+            <h2>Alicekwkwland</h2>
+            <p class="description">description</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/aslam.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/aslam.png" alt="" />
-                <h4>Aslaaaam#0000</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/aslam.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/aslam.png" alt="profile image" class="profile-image">
+            <h2>Aslammmm</h2>
+            <p class="description">adescription</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/wilson.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/wilson.png" alt="" />
-                <h4>Verox1#0000</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/dapi.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/dapi.png" alt="profile image" class="profile-image">
+            <h2>Reighpuy</h2>
+            <p class="description">description</p>
           </div>
-          <div
-            class="pana-accordion-item set-bg"
-            data-setbg="img/curut/dapi.png"
-          >
-            <div class="pa-text">
-              <div class="pa-author">
-                <img src="img/admin/dapi.png" alt="" />
-                <h4>Reighpuy#1257</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="hero-slider-warp">
-        <div class="hero-slider owl-carousel">
-          <div class="hero-item set-bg" data-setbg="img/curut/mia.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/576915512098029578/4af8212573b250e73a9e48ae1b8655f7.webp?size=128"
-                  alt=""
-                />
-                <h4>Mia26#0000</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/brendod.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/598819826982715393/75667f3a2f683df3e24b1e78c56f5aa2.png?size=128"
-                  alt=""
-                />
-                <h4>Spieky#0000</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/ruru.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/525287599112454144/e7420235c6b9eb64f34aa8c90631db21.png?size=128"
-                  alt=""
-                />
-                <h4>Ruru#1623</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/minek.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/663049629209985036/43fcd7157decf3fc403200518215b0ac.png?size=128"
-                  alt=""
-                />
-                <h4>Jasminevza#0451</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/alice.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/417526069240004608/25166235241ae884c191a9fc7321dc9b.png?size=128"
-                  alt=""
-                />
-                <h4>Alicekwkland#0000</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/aslam.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/561412873742712855/f3edb8733648403e9b81082a4bb63a97.png?size=128"
-                  alt=""
-                />
-                <h4>Aslaaaam#0000</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/wilson.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=128"
-                  alt=""
-                />
-                <h4>Verox1#0000</h4>
-              </div>
-            </div>
-          </div>
-          <div class="hero-item set-bg" data-setbg="img/curut/dapi.png">
-            <div class="pa-text">
-              <div class="pa-author">
-                <img
-                  src="https://cdn.discordapp.com/avatars/415466692064313344/0338e10d8ab1c8fb6678f22e62147e29.png?size=128"
-                  alt=""
-                />
-                <h4>Reighpuy#1257</h4>
-              </div>
-            </div>
+          <div class="card">
+            <img src="img/curut/wilson.png" alt="card background" class="card-bg-img">
+            <img src="img/admin/wilson.png" alt="profile image" class="profile-image">
+            <h2>Verox1</h2>
+            <p class="description">description</p>
           </div>
         </div>
       </div>
