--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="landing">
             <div class="landingText" data-aos="zoom-out-down" data-aos-duration="1000">
                 <h2>Selamat datang di <span>Miawu.</span></h2>
-                <hr color="black">
+                <hr color="#AF72FE">
                 <h3>Tempat menyimpan kenangan xixixi.</h3>
             </div>
             <div class="landingImage" data-aos="fade-up" data-aos-duration="2000">
