--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body bgcolor="#181A1B">
     <div class="wrapper">
@@ -168,6 +169,11 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <!-- <h2>Made with <span>Love</span> by <b>Miawu</b>.</h2> -->
+            <a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.instagram.com/miawu.co" class="fa fa-twitter" target="_blank"></a>
+        </div>
+    </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
