--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Miawu</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/christmas.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -18,8 +19,39 @@
                 <h4>Miawu</h4>
             </div>
         </div>
+    
+        <h1>Merry Christmas ! </h1>
 
         <!-- LANDING PAGE -->
+
+        <div class="light">
+            <ul class="line">
+                <li class="red"></li>
+                <li class="yellow"></li>
+                <li class="blue"></li>
+                <li class="pink"></li>
+                <li class="red"></li>
+                <li class="green"></li>
+                <li class="blue"></li>
+                <li class="yellow"></li>
+                <li class="red"></li>
+                <li class="pink"></li>
+                <li class="blue"></li>
+                <li class="yellow"></li>
+                <li class="red"></li>
+                <li class="green"></li>
+                <li class="blue"></li>
+                <li class="yellow"></li>
+                <li class="red"></li>
+                <li class="pink"></li>
+                <li class="green"></li>
+                <li class="blue"></li>
+                <li class="pink"></li>
+                <li class="red"></li>
+                <li class="green"></li>
+                <li class="blue"></li>
+            </ul>
+        </div>
 
         <div class="landing">
             <div class="landingText" data-aos="zoom-out-down" data-aos-duration="1000">
@@ -177,8 +209,10 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/christmas.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script>
             AOS.init();
     </script>
