--- a/index.html
+++ b/index.html
@@ -3,59 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Miawu</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/christmas.css">
+    <link rel="stylesheet" href="css/xmax.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body bgcolor="#181A1B">
+<body bgcolor="#131516">
     <div class="wrapper">
         <div class="nav">
             <div class="logo">
-                <h4>Miawu</h4>
+                <h4>🎅Miawu🎄</h4>
             </div>
         </div>
     
-        <h1>Merry Christmas ! </h1>
-
         <!-- LANDING PAGE -->
 
-        <div class="light">
-            <ul class="line">
-                <li class="red"></li>
-                <li class="yellow"></li>
-                <li class="blue"></li>
-                <li class="pink"></li>
-                <li class="red"></li>
-                <li class="green"></li>
-                <li class="blue"></li>
-                <li class="yellow"></li>
-                <li class="red"></li>
-                <li class="pink"></li>
-                <li class="blue"></li>
-                <li class="yellow"></li>
-                <li class="red"></li>
-                <li class="green"></li>
-                <li class="blue"></li>
-                <li class="yellow"></li>
-                <li class="red"></li>
-                <li class="pink"></li>
-                <li class="green"></li>
-                <li class="blue"></li>
-                <li class="pink"></li>
-                <li class="red"></li>
-                <li class="green"></li>
-                <li class="blue"></li>
-            </ul>
+        <!-- Xmax Ball -->
+        <div class="overall" data-aos="fade-down" data-aos-duration="1000">
+            <div class="string"></div>
+            <div class="ring"></div>
+            <div class="buttonz"></div>
+            <div class="ball"></div>
         </div>
 
         <div class="landing">
             <div class="landingText" data-aos="zoom-out-down" data-aos-duration="1000">
-                <h2>Selamat datang di <span>Miawu.</span></h2>
+                <h2>Selamat datang di <span>Miawu</span>.</h2>
                 <hr color="#AF72FE">
                 <h3>Tempat menyimpan kenangan xixixi.</h3>
             </div>
@@ -67,8 +42,9 @@
         <!-- DAFTAR ACARA / DA -->
 
         <div class="daSection">
-            <div class="daHeader" data-aos="fade-left" data-aos-duration="1000">
+            <div class="daHeader" data-aos="zoom-in-down" data-aos-duration="1000">
                 <h1>Daftar Acara</h1>
+                <p>(Belum semua)</p>
             </div>
             <div class="daCards">
                 <div class="card one" data-aos="fade-down" data-aos-duration="3000">
@@ -89,7 +65,7 @@
         </div>
 
         <div class="galeriSection">
-            <div class="galeriHeader" data-aos="fade-up" data-aos-duration="1000">
+            <div class="galeriHeader" data-aos="zoom-in-down" data-aos-duration="2000">
                 <h1>Galeri</h1>
             </div>
             <div class="container" data-aos="fade-down" data-aos-duration="3000">
@@ -203,13 +179,12 @@
         </div>
         <div class="footer">
             <!-- <h2>Made with <span>Love</span> by <b>Miawu</b>.</h2> -->
-            <a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.instagram.com/miawu.co" class="fa fa-twitter" target="_blank"></a>
+            <a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a>
         </div>
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/christmas.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
