--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <div class="landing">
             <div class="landingText" data-aos="zoom-out-down" data-aos-duration="1000">
                 <h2>Selamat datang di <span>Miawu</span>.</h2>
-                <hr color="#AF72FE">
+                <hr class="num1" align="left">
+                <hr class="num2" color="#131516" align="center">
                 <h3>Tempat menyimpan kenangan xixixi.</h3>
             </div>
             <div class="landingImage" data-aos="fade-up" data-aos-duration="2000">
