--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!--IG EFFECT / IE Section -->
 
-        <div class="igeffectSection">
+            <div class="igeffectSection">
             <div class="ieHeader" data-aos="zoom-in-down" data-aos-duration="1000">
                 <h1>Insta Effect</h1>
             </div>
@@ -73,14 +73,17 @@
                         <h2><span>‎‎</span>1st</h2>
                         <h3>Crowns</h3>
                     </div>
+                    <a href="https://www.instagram.com/ar/1344132829254048" target="_blank"><center><h1>Visit</h1></center></a>
                 </div>
             </div>
         </div>
 
+        <hr style="border: 2px solid #AF72FE; height: 4px;"><br>
         <div class="footer">
             <!-- <h2>Made with <span>Love</span> by <b>Miawu</b>.</h2> -->
-            <a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a>
+            <h1>|</h1><center><a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a></center><h1>|</h1>
         </div>
+        <center><h3 style="color: white; margin-bottom: 3px;">Made with ❤️ by <span style="color: #AF72FE;">Miawu</span></h3></center>
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
