--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         </div>
 
         <hr style="border: 2px solid #AF72FE; height: 4px;"><br>
-        <div class="footer">
+        <center><div class="footer">
             <!-- <h2>Made with <span>Love</span> by <b>Miawu</b>.</h2> -->
-            <h1>|</h1><center><a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a></center><h1>|</h1>
-        </div>
-        <center><h3 style="color: white; margin-bottom: 3px;">Made with ❤️ by <span style="color: #AF72FE;">Miawu</span></h3></center>
+            <h1>|</h1><a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a><h1>|</h1>
+        </div></center>
+        <center><h3 style="color: white; margin-bottom: 0px; padding-bottom: 20px;">Made with ❤️ by <span style="color: #AF72FE;">Miawu</span></h3></center>
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
