--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.png" sizes="16x16">
     <title>Miawu</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/igeffect.css">
@@ -17,7 +18,7 @@
     <div class="wrapper">
         <div class="nav">
             <div class="logo">
-                <h4>🎅Miawu🎄</h4>
+                <h4>Miawu</h4>
             </div>
         </div>
     
@@ -40,7 +41,8 @@
         <div class="daSection">
             <div class="daHeader" data-aos="zoom-in-down" data-aos-duration="1000">
                 <h1>Daftar Acara</h1>
-                <p>(Belum semua)</p>
+                <hr class="num1" align="center">
+                <hr class="num2" color="#131516" align="center">
             </div>
             <div class="daCards">
                 <div class="card one" data-aos="fade-down" data-aos-duration="3000">
@@ -48,6 +50,11 @@
                     <div class="cardContent">
                         <h2>First Event</h2>
                         <p>20 Juli 2020</p>
+                        <a href="/event-details/first-event">
+                            <div class="cardBtn">
+                                <img src="/images/next.png" alt="" class="cardIcon">
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="card two" data-aos="fade-up" data-aos-duration="3000">
@@ -65,23 +72,33 @@
             <div class="igeffectSection">
             <div class="ieHeader" data-aos="zoom-in-down" data-aos-duration="1000">
                 <h1>Insta Effect</h1>
+                <hr class="num1" align="center">
+                <hr class="num2" color="#131516" align="center">
             </div>
             <div class="ieCards">
-                <div class="card one" data-aos="fade-down" data-aos-duration="3000">
-                    <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-out-down" data-aos-duration="3000">
+                <div class="card one" data-aos="fade-down" data-aos-duration="1000">
+                    <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-out-down" data-aos-duration="1000">
                     <div class="cardContent" data-aos="zoom-out-down" data-aos-duration="1000">
                         <h2><span>‎‎</span>1st</h2>
                         <h3>Crowns</h3>
                     </div>
                     <a href="https://www.instagram.com/ar/1344132829254048" target="_blank"><center><h1>Visit</h1></center></a>
                 </div>
+                <!-- <div class="card2 two" data-aos="fade-down" data-aos-duration="1000">
+                    <img src="images/igeffect/effect-1_logo.jpg" class="cardtwoImg" alt="">
+                    <div class="cardContent2" data-aos="zoom-out-down" data-aos-duration="1000">
+                        <h2><span>‎‎</span>2nd</h2>
+                        <h3>Belum diketahui</h3>
+                    </div>
+                    <a href="https://www.instagram.com/ar/1344132829254048" target="_blank"><center><h1>Visit</h1></center></a>
+                </div> -->
             </div>
         </div>
 
         <hr style="border: 2px solid #AF72FE; height: 4px;"><br>
         <center><div class="footer">
             <!-- <h2>Made with <span>Love</span> by <b>Miawu</b>.</h2> -->
-            <h1>|</h1><a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a><h1>|</h1>
+            <a href="https://www.instagram.com/miawu.co" class="fa fa-instagram" target="_blank"></a><a href="https://www.twitter.com/miawu.co" class="fa fa-twitter" target="_blank"></a>
         </div></center>
         <center><h3 style="color: white; margin-bottom: 0px; padding-bottom: 20px;">Made with ❤️ by <span style="color: #AF72FE;">Miawu</span></h3></center>
     </div>
